--- a/grade-converter/grade.css
+++ b/grade-converter/grade.css
@@ -3,13 +3,18 @@
     color: antiquewhite;
 }
 
-
 body{
     text-align: center;
 }
 
+h1{
+    font-size: 100px;
+}
+
 h3{
     color: antiquewhite;
+    font-size: 40px;
+    font-style: italic;
 }
 
 #button{
@@ -21,10 +26,11 @@ h3{
     border-radius: 20px;
     position: relative;
     top: -8px;
+    margin: 10px;
 }
 
-button:hover{
-    transform: scale(1.05);
+#button:hover{
+    transform: scale(1.15);
     transition: .4s;
     background-color: gold;
     color: black;
@@ -35,11 +41,12 @@ input{
     border: 2px solid gold;
     border-radius: 30px;
     font-size: 40px;
+    height: 55px;
     text-align: center;
 }
 
 input:hover{
-    transform: scale(1.015);
+    transform: scale(1.05);
     transition: .4s;
     cursor: pointer;
 }
